# run-jam

./: Cargo.toml
.github/workflows/: release.yaml
assets/: base_models.blend  base_models.blend1  collected.flac  color_pallette.xcf  destroyed.flac  logo.blend  pickup.flac  space.wgsl  ui-style.ess
src/: actions.rs  assets.rs  audio.rs  credits_screen.rs  game_menu_screen.rs  game_over_screen.rs  game_state.rs  goal.rs  gravity.rs  gravity_spawner.rs  in_game_ui.rs  level.rs  main.rs  main_camera.rs  pickup.rs  player.rs  space_material.rs
